--- a/tourism_cross-platform/src/css/quasar.variables.scss
+++ b/tourism_cross-platform/src/css/quasar.variables.scss
@@ -11,8 +11,10 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
-
-$primary   : #1976D2;
+@font-face {
+  font-family: Battambang;
+}
+$primary   : #0087d2;
 $secondary : #26A69A;
 $accent    : #9C27B0;
 
